// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns all baseRoutes 1`] = `
Array [
  Object {
    "component": [Function],
    "icon": "list",
    "layout": "main",
    "path": "/features",
    "title": "Feature Toggles",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "extension",
    "layout": "main",
    "path": "/strategies",
    "title": "Strategies",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "history",
    "layout": "main",
    "path": "/history",
    "title": "Event History",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "archive",
    "layout": "main",
    "path": "/archive",
    "title": "Archived Toggles",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "apps",
    "layout": "main",
    "path": "/applications",
    "title": "Applications",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "flag": "C",
    "icon": "album",
    "layout": "main",
    "path": "/context",
    "title": "Context Fields",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "flag": "P",
    "icon": "folder_open",
    "layout": "main",
    "path": "/projects",
    "title": "Projects",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "label",
    "layout": "main",
    "path": "/tag-types",
    "title": "Tag types",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "device_hub",
    "layout": "main",
    "path": "/addons",
    "title": "Addons",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "report",
    "layout": "main",
    "path": "/reporting",
    "title": "Reporting",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "exit_to_app",
    "layout": "main",
    "path": "/logout",
    "title": "Sign out",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "album",
    "layout": "main",
    "path": "/admin",
    "title": "Admin",
    "type": "protected",
  },
]
`;

exports[`returns all defined routes 1`] = `
Array [
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/features",
    "path": "/features/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/features",
    "path": "/features/copy/:copyToggle",
    "title": "Copy",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/features",
    "path": "/features/:activeTab/:name",
    "title": ":name",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "list",
    "layout": "main",
    "path": "/features",
    "title": "Feature Toggles",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/strategies",
    "path": "/strategies/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/strategies",
    "path": "/strategies/:activeTab/:strategyName",
    "title": ":strategyName",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "extension",
    "layout": "main",
    "path": "/strategies",
    "title": "Strategies",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/history",
    "path": "/history/:toggleName",
    "title": ":toggleName",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "history",
    "layout": "main",
    "path": "/history",
    "title": "Event History",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/archive",
    "path": "/archive/:activeTab/:name",
    "title": ":name",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "archive",
    "layout": "main",
    "path": "/archive",
    "title": "Archived Toggles",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/applications",
    "path": "/applications/:name",
    "title": ":name",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "apps",
    "layout": "main",
    "path": "/applications",
    "title": "Applications",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/context",
    "path": "/context/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/context",
    "path": "/context/edit/:name",
    "title": ":name",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "flag": "C",
    "icon": "album",
    "layout": "main",
    "path": "/context",
    "title": "Context Fields",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/projects",
    "path": "/projects/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/projects",
    "path": "/projects/edit/:id",
    "title": ":id",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/projects",
    "path": "/projects/:id/access",
    "title": ":id",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "flag": "P",
    "icon": "folder_open",
    "layout": "main",
    "path": "/projects",
    "title": "Projects",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/tag-types",
    "path": "/tag-types/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/tag-types",
    "path": "/tag-types/edit/:name",
    "title": ":name",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "label",
    "layout": "main",
    "path": "/tag-types",
    "title": "Tag types",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/tags",
    "path": "/tags/create",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "hidden": true,
    "icon": "label",
    "layout": "main",
    "path": "/tags",
    "title": "Tags",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/addons",
    "path": "/addons/create/:provider",
    "title": "Create",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/addons",
    "path": "/addons/edit/:id",
    "title": "Edit",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "device_hub",
    "layout": "main",
    "path": "/addons",
    "title": "Addons",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "report",
    "layout": "main",
    "path": "/reporting",
    "title": "Reporting",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "icon": "exit_to_app",
    "layout": "main",
    "path": "/logout",
    "title": "Sign out",
    "type": "protected",
  },
  Object {
    "component": Object {
      "$$typeof": Symbol(react.memo),
      "WrappedComponent": [Function],
      "compare": null,
      "type": [Function],
    },
    "hidden": true,
    "icon": "user",
    "layout": "standalone",
    "path": "/login",
    "title": "Log in",
    "type": "unprotected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/admin",
    "path": "/admin/api",
    "title": "API access",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "layout": "main",
    "parent": "/admin",
    "path": "/admin/users",
    "title": "Users",
    "type": "protected",
  },
  Object {
    "component": Object {
      "$$typeof": Symbol(react.memo),
      "WrappedComponent": [Function],
      "compare": null,
      "type": [Function],
    },
    "layout": "main",
    "parent": "/admin",
    "path": "/admin/auth",
    "title": "Authentication",
    "type": "protected",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "album",
    "layout": "main",
    "path": "/admin",
    "title": "Admin",
    "type": "protected",
  },
]
`;
